Fixed tslint issues

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>SDL.UI.Charts</title>
+    <title>frnk.UI.Charts</title>
     <!-- general styles -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/jquery.ui.theme.css" />
