--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,13 @@
                 <select id="type">
                     <option value="line" onchange="draw();">Line Chart</option>
                     <option value="stackedline" onchange="draw();">Stacked Line Chart</option>
-                    <option value="stackedpercentline" onchange="draw();">Stacked 100% Line Chart</option>
+                    <option value="stackedpercentline" onchange="draw();">100% Stacked Line Chart</option>
                     <option value="column" onchange="draw();">Column Chart</option>
                     <option value="stackedcolumn" onchange="draw();">Stacked Column Chart</option>
-                    <option value="stackedpercentcolumn" onchange="draw();">Stacked 100% Column Chart</option>
+                    <option value="stackedpercentcolumn" onchange="draw();">100% Stacked Column Chart</option>
                     <option value="bar" onchange="draw();">Bar Chart</option>
                     <option value="stackedbar" onchange="draw();">Stacked Bar Chart</option>
-                    <option value="stackedpercentbar" onchange="draw();">Stacked 100% Bar Chart</option>
+                    <option value="stackedpercentbar" onchange="draw();">100% Stacked Bar Chart</option>
                     <option value="pie" onchange="draw();">Pie Chart</option>
                 </select>
             </div>
@@ -42,13 +42,13 @@
         var el = document.getElementById('chart');
         //var url = "data/Actuals-vs-Budget.txt";
         //var url = "data/area-basic-1serie-ordinal.txt";
-        //var url = "data/area-basic-nserie-ordinal.txt";
+        var url = "data/area-basic-nserie-ordinal.txt";
         //var url = "data/area-negative-1serie-ordinal.txt";
         //var url = "data/area-negative-nserie-ordinal.txt";
         //var url = "data/area-negative-inverted-1serie-ordinal.txt";
         //var url = "data/area-negative-inverted-nserie-ordinal.txt";
         //var url = "data/column-range.txt";
-        var url = "data/settings-time-1.txt";
+        //var url = "data/settings-time-1.txt";
         //var url = "data/settings-time-2.txt";
         //var url = "data/settings-time-3.txt";
 
