added examples for area and bar charts

--- a/src/examples/column-stacked-percent.html
+++ b/src/examples/column-stacked-percent.html
@@ -1,13 +1,13 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Column - Stacked Percent</title>
+    <title>Column Chart - 100% Stacked</title>
     <!-- general styles -->
-    <link rel="stylesheet" href="../../../dist/css/style.css" />
-    <link rel="stylesheet" href="../../../dist/css/d3charts.css" />
-    <script src="../../../dist/js/d3.min.js" charset="utf-8"></script>
-    <script src="../../../dist/js/d3chart.js"></script>
+    <link rel="stylesheet" href="../../dist/css/style.css" />
+    <link rel="stylesheet" href="../../dist/css/d3charts.css" />
+    <script src="../../dist/js/d3.min.js" charset="utf-8"></script>
+    <script src="../../dist/js/d3chart.js"></script>
 </head>
 <body>
     <div id="chart" />
@@ -21,19 +21,18 @@
 			"linechart": {
 				"fillArea": "yes",
 				"interpolation": "linear",
-				"showMarkers": "yes",
-				"stacking": "percent"
+				"showMarkers": "yes"
 			},
 			"piechart": {
 				"innerRadius": 0.7
 			},
 			"legend": {
-				"title": "Country",
+				"title": "Who?",
 				"position": "right",
 				"width": 200
 			},
 			"title": {
-				"text": "Stacked Percent Column Chart ",
+				"text": "Column Chart - 100% Stacked",
 				"align": "center",
 				"height": 50
 			},
@@ -57,7 +56,7 @@
 				"tickmark": "yes",
 				"ticks": 4,
 				"title": {
-					"text": "Total fruit consumption"
+					"text": "Values"
 				}
 			},
 			"tooltip": { 
