--- a/src/examples/area-basic.html
+++ b/src/examples/area-basic.html
@@ -1,13 +1,13 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Area - Basic</title>
+    <title>Area Chart - Basic</title>
     <!-- general styles -->
-    <link rel="stylesheet" href="../../../dist/css/style.css" />
-    <link rel="stylesheet" href="../../../dist/css/d3charts.css" />
-    <script src="../../../dist/js/d3.min.js" charset="utf-8"></script>
-    <script src="../../../dist/js/d3chart.js"></script>
+    <link rel="stylesheet" href="../../dist/css/style.css" />
+    <link rel="stylesheet" href="../../dist/css/d3charts.css" />
+    <script src="../../dist/js/d3.min.js" charset="utf-8"></script>
+    <script src="../../dist/js/d3chart.js"></script>
 </head>
 <body>
     <div id="chart" />
@@ -21,8 +21,7 @@
 			"linechart": {
 				"fillArea": "yes",
 				"interpolation": "linear",
-				"showMarkers": "no",
-				"stacking": "percent"
+				"showMarkers": "no"
 			},
 			"piechart": {
 				"innerRadius": 0.7
@@ -33,7 +32,7 @@
 				"width": 200
 			},
 			"title": {
-				"text": "US and USSR nuclear stockpiles",
+				"text": "Area Chart - Basic",
 				"align": "center",
 				"height": 50
 			},
