--- a/src/examples/area-negative.html
+++ b/src/examples/area-negative.html
@@ -1,13 +1,13 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Area - Basic</title>
+    <title>Area Chart - Negative</title>
     <!-- general styles -->
-    <link rel="stylesheet" href="../../../dist/css/style.css" />
-    <link rel="stylesheet" href="../../../dist/css/d3charts.css" />
-    <script src="../../../dist/js/d3.min.js" charset="utf-8"></script>
-    <script src="../../../dist/js/d3chart.js"></script>
+    <link rel="stylesheet" href="../../dist/css/style.css" />
+    <link rel="stylesheet" href="../../dist/css/d3charts.css" />
+    <script src="../../dist/js/d3.min.js" charset="utf-8"></script>
+    <script src="../../dist/js/d3chart.js"></script>
 </head>
 <body>
     <div id="chart" />
@@ -21,19 +21,18 @@
 			"linechart": {
 				"fillArea": "yes",
 				"interpolation": "linear",
-				"showMarkers": "yes",
-				"stacking": "percent"
+				"showMarkers": "yes"
 			},
 			"piechart": {
 				"innerRadius": 0.7
 			},
 			"legend": {
-				"title": "Country",
+				"title": "Who?",
 				"position": "right",
 				"width": 200
 			},
 			"title": {
-				"text": "Area chart with negative values",
+				"text": "Area Chart - Negative values",
 				"align": "center",
 				"height": 50
 			},
@@ -48,7 +47,7 @@
 				},
 				"tickmark": "no",
 				"title": { 
-					"text": "Year"
+					"text": "Fruit"
 				}
 			},
 			"yAxis": {
@@ -57,7 +56,7 @@
 				"tickmark": "yes",
 				"tickmark": "no",
 				"title": {
-					"text": "Nuclear weapong status"
+					"text": "Fruit Units"
 				}
 			},
 			"tooltip": { 
