--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <!-- d3charts -->
     <link rel="stylesheet" href="css/d3charts.css" />
     <script src="js/d3.min.js" charset="utf-8"></script>
-    <script src="js/d3chart.js"></script>
+    <script src="js/d3.charts.js"></script>
 </head>
 <body>
     <h1>Dashboard</h1>
