--- a/src/examples/area-stacked-percent.html
+++ b/src/examples/area-stacked-percent.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../dist/css/style.css" />
     <link rel="stylesheet" href="../../dist/css/d3charts.css" />
     <script src="../../dist/js/d3.min.js" charset="utf-8"></script>
-    <script src="../../dist/js/d3chart.js"></script>
+    <script src="../../dist/js/d3.charts.js"></script>
 </head>
 <body>
     <div id="chart" />
