refactored categories config

--- a/src/examples/area-negative.html
+++ b/src/examples/area-negative.html
@@ -65,7 +65,7 @@
 			},
 			"categories": {
 				"format": "%s",
-				"labels": ["Apples", "Oranges", "Pears", "Grapes", "Bananas"]
+				"data": ["Apples", "Oranges", "Pears", "Grapes", "Bananas"]
 			},
 			"series": 
 				[{
