--- a/src/examples/area-spline.html
+++ b/src/examples/area-spline.html
@@ -65,7 +65,7 @@
 			},
 			"categories": {
 				"format": "%s",
-				"labels": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]
+				"data": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]
 			},
 			"series":
 				[{
