--- a/src/examples/area-stacked-percent.html
+++ b/src/examples/area-stacked-percent.html
@@ -65,7 +65,7 @@
 			},
 			"categories": {
 				"format": "%s",
-				"labels": ["1750", "1800", "1850", "1900", "1950", "1999", "2050"]
+				"data": ["1750", "1800", "1850", "1900", "1950", "1999", "2050"]
 			},
 			"series":
 				[{
