--- a/src/examples/bar-basic.html
+++ b/src/examples/bar-basic.html
@@ -65,7 +65,7 @@
 			},
 			"categories": {
 				"format": "%s",
-				"labels": ["Africa", "America", "Asia", "Europe", "Oceania"]
+				"data": ["Africa", "America", "Asia", "Europe", "Oceania"]
 			},
 			"series": [{
 					"name": "Year 1800",
