--- a/src/examples/donut-basic.html
+++ b/src/examples/donut-basic.html
@@ -65,7 +65,7 @@
 			},
 			"categories": {
 				"format": "%s",
-				"labels": ["Firefox", "IE", "Safari", "Opera", "Others"]
+				"data": ["Firefox", "IE", "Safari", "Opera", "Others"]
 			},
 			"series": [{
                 "name": "Browsers",
