--- a/src/examples/line-basic.html
+++ b/src/examples/line-basic.html
@@ -65,7 +65,7 @@
 			},
 			"categories": {
 				"format": "%s",
-				"labels": ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"]
+				"data": ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"]
 			},
 			"series":
 				[{
