refactored series config

--- a/src/examples/area-negative.html
+++ b/src/examples/area-negative.html
@@ -37,7 +37,7 @@
 				"height": 50
 			},
 			"subtitle": {
-				"text": "subtitle" 
+				"text": "subtitle"
 			},
 			"xAxis": {
 				"gridlines": "none",
@@ -46,7 +46,7 @@
 					"rotate": "0"
 				},
 				"tickmark": "no",
-				"title": { 
+				"title": {
 					"text": "Fruit"
 				}
 			},
@@ -59,7 +59,7 @@
 					"text": "Fruit Units"
 				}
 			},
-			"tooltip": { 
+			"tooltip": {
 				"title": "Warheads",
 				"valueSuffix": " warheads"
 			},
@@ -67,18 +67,18 @@
 				"format": "%s",
 				"data": ["Apples", "Oranges", "Pears", "Grapes", "Bananas"]
 			},
-			"series": 
-				[{
-					"name": "John",
-					"data": [5, 3, 4, 7, 2]
-				}, {
-					"name": "Jane",
-					"data": [2, -2, -3, 2, 1]
-				}, {
-					"name": "Joe",
-					"data": [3, 4, 4, -2, 5]
+			"series":{
+				"data": [{
+						"name": "John",
+						"data": [5, 3, 4, 7, 2]
+					}, {
+						"name": "Jane",
+						"data": [2, -2, -3, 2, 1]
+					}, {
+						"name": "Joe",
+						"data": [3, 4, 4, -2, 5]
 				}]
-			,
+			},
 			"plotOptions": {
 				"general": { 
 					"innerPadding": 0.1,
