--- a/src/examples/donut-basic.html
+++ b/src/examples/donut-basic.html
@@ -67,11 +67,12 @@
 				"format": "%s",
 				"data": ["Firefox", "IE", "Safari", "Opera", "Others"]
 			},
-			"series": [{
-                "name": "Browsers",
-                "data": [45, 26.8, 8.5, 6.2, 0.7]
-				}]
-			,
+			"series": { 
+				"data": [{
+						"name": "Browsers",
+						"data": [45, 26.8, 8.5, 6.2, 0.7]
+					}]
+			},
 			"plotOptions": {
 				"general": { 
 					"innerPadding": 0.1,
