--- a/src/examples/pie-multiple-series.html
+++ b/src/examples/pie-multiple-series.html
@@ -67,10 +67,10 @@
 				"format": "%s",
 				"data": ["1750", "1800", "1850", "1900", "1950", "1999", "2050"]
 			},
-			"series":
-				[{
-					"name": "Asia",
-					"data": [52, 635, 809, 947, 1402, 3634, 5268]
+			"series": {
+				"data": [{
+						"name": "Asia",
+						"data": [52, 635, 809, 947, 1402, 3634, 5268]
 					},
 					{
 						"name": "Africa",
@@ -88,7 +88,7 @@
 						"name": "Oceania",
 						"data": [50, 20, 20, 60, 130, 300, 460]
 				}]
-			,
+			},
 			"plotOptions": {
 				"general": { 
 					"innerPadding": 0.1,
