--- a/src/examples/area-stacked-percent.html
+++ b/src/examples/area-stacked-percent.html
@@ -67,28 +67,28 @@
 				"format": "%s",
 				"data": ["1750", "1800", "1850", "1900", "1950", "1999", "2050"]
 			},
-			"series":
-				[{
-					"name": "Oceania",
-					"data": [2, 2, 2, 6, 13, 30, 46]
-				},
-				{
-					"name": "Asia",
-					"data": [502, 635, 809, 947, 1402, 3634, 5268]
-				},
-				{
-					"name": "Africa",
-					"data": [106, 107, 111, 133, 221, 767, 1766]
-				},
-				{
-					"name": "Europe",
-					"data": [163, 203, 276, 408, 547, 729, 628]
-				},
-				{
-					"name": "America",
-					"data": [18, 31, 54, 156, 339, 818, 1201]
-				}]
-			,
+			"series": {
+				"data": [{
+						"name": "Oceania",
+						"data": [2, 2, 2, 6, 13, 30, 46]
+					},
+					{
+						"name": "Asia",
+						"data": [502, 635, 809, 947, 1402, 3634, 5268]
+					},
+					{
+						"name": "Africa",
+						"data": [106, 107, 111, 133, 221, 767, 1766]
+					},
+					{
+						"name": "Europe",
+						"data": [163, 203, 276, 408, 547, 729, 628]
+					},
+					{
+						"name": "America",
+						"data": [18, 31, 54, 156, 339, 818, 1201]
+					}]
+			},
 			"plotOptions": {
 				"general": { 
 					"innerPadding": 1,
