--- a/src/examples/area-stepbefore.html
+++ b/src/examples/area-stepbefore.html
@@ -67,15 +67,15 @@
 				"format": "%s",
 				"data": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]
 			},
-			"series":
-				[{
-					"name": "John",
-					"data": [3, 4, 3, 5, 4, 10, 12]
-				}, {
-					"name": "Jane",
-					"data": [1, 3, 4, 3, 3, 5, 4]
-				}]
-			,
+			"series": {
+				"data": [{
+						"name": "John",
+						"data": [3, 4, 3, 5, 4, 10, 12]
+					}, {
+						"name": "Jane",
+						"data": [1, 3, 4, 3, 3, 5, 4]
+					}]
+			},
 			"plotOptions": {
 				"general": { 
 					"innerPadding": 0.1,
