--- a/src/examples/bar-basic.html
+++ b/src/examples/bar-basic.html
@@ -67,17 +67,18 @@
 				"format": "%s",
 				"data": ["Africa", "America", "Asia", "Europe", "Oceania"]
 			},
-			"series": [{
-					"name": "Year 1800",
-					"data": [107, 31, 635, 203, 2]
-				}, {
-					"name": "Year 1900",
-					"data": [133, 156, 947, 408, 6]
-				}, {
-					"name": "Year 2008",
-					"data": [973, 914, 4054, 732, 34]
-				}]
-			,
+			"series": {
+				"data": [{
+						"name": "Year 1800",
+						"data": [107, 31, 635, 203, 2]
+					}, {
+						"name": "Year 1900",
+						"data": [133, 156, 947, 408, 6]
+					}, {
+						"name": "Year 2008",
+						"data": [973, 914, 4054, 732, 34]
+					}]
+			},
 			"plotOptions": {
 				"general": { 
 					"innerPadding": 0.1,
