--- a/src/examples/column-stacked-percent.html
+++ b/src/examples/column-stacked-percent.html
@@ -67,18 +67,18 @@
 				"format": "%s",
 				"data": ['Apples', 'Oranges', 'Pears', 'Grapes', 'Bananas']
 			},
-			"series": 
-				[{
-					name: 'John',
-					data: [-5, 3, 4, 7, 2]
-				}, {
-					name: 'Jane',
-					data: [2, 2, 3, 2, 1]
-				}, {
-					name: 'Joe',
-					data: [3, 4, 4, 2, 5]
-				}]
-			,
+			"series": { 
+				"data": [{
+						name: 'John',
+						data: [-5, 3, 4, 7, 2]
+					}, {
+						name: 'Jane',
+						data: [2, 2, 3, 2, 1]
+					}, {
+						name: 'Joe',
+						data: [3, 4, 4, 2, 5]
+					}]
+			},
 			"plotOptions": {
 				"general": { 
 					"innerPadding": 0.1,
