--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
                     <option value="column" onchange="draw();">Column Chart</option>
                     <option value="stackedcolumn" onchange="draw();">Stacked Column Chart</option>
                     <option value="stackedpercentcolumn" onchange="draw();">100% Stacked Column Chart</option>
+                    <option value="combo" onchange="draw();">Combo Chart</option>
                     <option value="bar" onchange="draw();">Bar Chart</option>
                     <option value="stackedbar" onchange="draw();">Stacked Bar Chart</option>
                     <option value="stackedpercentbar" onchange="draw();">100% Stacked Bar Chart</option>
@@ -67,6 +68,10 @@
                 switch (val) {
                     case "column":
                         var chart = new frnk.UI.Charts.ColumnChart(settings, "#chart");
+                        chart.draw();
+                        break;
+                    case "combo":
+                        var chart = new frnk.UI.Charts.ComboChart(settings, "#chart");
                         chart.draw();
                         break;
                     case "stackedcolumn":
