fixed examples based on new config

--- a/src/examples/area-negative.html
+++ b/src/examples/area-negative.html
@@ -36,7 +36,7 @@
 				"align": "center",
 				"height": 50
 			},
-			"xAxis": {
+			"xAxis": [{
 				"gridlines": "none",
 				"position": "top",
 				"labels": {
@@ -46,8 +46,8 @@
 				"title": {
 					"text": "Fruit"
 				}
-			},
-			"yAxis": {
+			}],
+			"yAxis": [{
 				"gridlines": "major",
 				"position": "left",
 				"tickmark": "yes",
@@ -55,7 +55,7 @@
 				"title": {
 					"text": "Fruit Units"
 				}
-			},
+			}],
 			"tooltip": {
 				"title": "Warheads",
 				"valueSuffix": " warheads"
