--- a/src/examples/area-spline.html
+++ b/src/examples/area-spline.html
@@ -23,9 +23,6 @@
 				"interpolation": "cardinal",
 				"showMarkers": "yes"
 			},
-			"piechart": {
-				"innerRadius": 0.7
-			},
 			"legend": {
 				"title": "Who?",
 				"position": "right",
@@ -36,7 +33,7 @@
 				"align": "center",
 				"height": 50
 			},
-			"xAxis": {
+			"xAxis": [{
 				"gridlines": "none",
 				"position": "top",
 				"labels": {
@@ -46,8 +43,8 @@
 				"title": { 
 					"text": "Day"
 				}
-			},
-			"yAxis": {
+			}],
+			"yAxis": [{
 				"gridlines": "none",
 				"position": "left",
 				"tickmark": "yes",
@@ -55,7 +52,7 @@
 				"title": {
 					"text": "Fruit Units"
 				}
-			},
+			}],
 			"tooltip": { 
 				"title": "Fruit Units",
 				"valueSuffix": " fruits"
