--- a/src/examples/bar-negative-stack.html
+++ b/src/examples/bar-negative-stack.html
@@ -18,14 +18,6 @@
 				"width": 600,
 				"padding": 90
 			},
-			"linechart": {
-				"fillArea": "yes",
-				"interpolation": "linear",
-				"showMarkers": "no"
-			},
-			"piechart": {
-				"innerRadius": 0.7
-			},
 			"legend": {
 				"title": "Category",
 				"position": "right",
@@ -36,7 +28,7 @@
 				"align": "center",
 				"height": 50
 			},
-			"xAxis": {
+			"xAxis": [{
 				"gridlines": "major",
 				"position": "top",
 				"labels": {
@@ -46,16 +38,24 @@
 				"title": { 
 					"text": "Population (millions)"
 				}
-			},
-			"yAxis": {
+			}],
+			"yAxis": [{
 				"gridlines": "none",
-				"position": "left",
+				"orient": "left",
 				"tickmark": "yes",
 				"tickmark": "no",
 				"title": {
 					"text": "Male vs Female"
 				}
-			},
+			},{
+				"gridlines": "none",
+				"orient": "right",
+				"tickmark": "yes",
+				"tickmark": "no",
+				"title": {
+					"text": "Male vs Female"
+				}
+			}],
 			"tooltip": { 
 				"title": "",
 				"valueSuffix": ""
