--- a/src/examples/bar-stacked.html
+++ b/src/examples/bar-stacked.html
@@ -18,14 +18,6 @@
 				"width": 600,
 				"padding": 90
 			},
-			"linechart": {
-				"fillArea": "yes",
-				"interpolation": "linear",
-				"showMarkers": "no"
-			},
-			"piechart": {
-				"innerRadius": 0.7
-			},
 			"legend": {
 				"title": "Who?",
 				"position": "right",
@@ -36,7 +28,7 @@
 				"align": "center",
 				"height": 50
 			},
-			"xAxis": {
+			"xAxis": [{
 				"gridlines": "major",
 				"position": "top",
 				"labels": {
@@ -46,8 +38,8 @@
 				"title": { 
 					"text": ""
 				}
-			},
-			"yAxis": {
+			}],
+			"yAxis": [{
 				"gridlines": "none",
 				"position": "left",
 				"tickmark": "yes",
@@ -55,7 +47,7 @@
 				"title": {
 					"text": ""
 				}
-			},
+			}],
 			"tooltip": { 
 				"title": "Warheads",
 				"valueSuffix": " warheads"
