support for dual axis in line, column and bar charts

--- a/src/examples/area-stacked-percent.html
+++ b/src/examples/area-stacked-percent.html
@@ -54,8 +54,8 @@
 				}
 			}],
 			"tooltip": { 
-				"title": "Fruit Units",
-				"valueSuffix": " fruits"
+				"title": "Population",
+				"valueSuffix": " people"
 			},
 			"categories": {
 				"format": "%s",
