--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,6 @@
                     <option value="column" onchange="draw();">Column Chart</option>
                     <option value="stackedcolumn" onchange="draw();">Stacked Column Chart</option>
                     <option value="stackedpercentcolumn" onchange="draw();">100% Stacked Column Chart</option>
-                    <option value="combo" onchange="draw();">Combo Chart</option>
                     <option value="bar" onchange="draw();">Bar Chart</option>
                     <option value="stackedbar" onchange="draw();">Stacked Bar Chart</option>
                     <option value="stackedpercentbar" onchange="draw();">100% Stacked Bar Chart</option>
@@ -43,8 +42,8 @@
         var el = document.getElementById('chart');
         //var url = "data/Actuals-vs-Budget.txt";
         //var url = "data/area-basic-1serie-ordinal.txt";
-        var url = "data/area-basic-nserie-ordinal.txt";
-        //var url = "data/multiple-axes.txt";
+        //var url = "data/area-basic-nserie-ordinal.txt";
+        var url = "data/multiple-axes.txt";
         //var url = "data/area-negative-1serie-ordinal.txt";
         //var url = "data/area-negative-nserie-ordinal.txt";
         //var url = "data/area-negative-inverted-1serie-ordinal.txt";
