refactored settings and used in interfaces

--- a/src/examples/area-stacked.html
+++ b/src/examples/area-stacked.html
@@ -19,9 +19,9 @@
 				"padding": 50
 			},
 			"linechart": {
-				"fillArea": "yes",
+				"fillArea": true,
 				"interpolation": "cardinal",
-				"showMarkers": "yes"
+				"showMarkers": true
 			},
 			"legend": {
 				"title": "Continent",
@@ -37,9 +37,9 @@
 				"gridlines": "none",
 				"position": "top",
 				"labels": {
-					"rotate": "0"
+					"rotate": 0
 				},
-				"tickmark": "no",
+				"tickmarks": false,
 				"title": { 
 					"text": "Year"
 				}
@@ -47,8 +47,7 @@
 			"yAxis": [{
 				"gridlines": "none",
 				"position": "left",
-				"tickmark": "yes",
-				"tickmark": "no",
+				"tickmarks": true,
 				"title": {
 					"text": "Billions"
 				}
