--- a/src/examples/bar-basic.html
+++ b/src/examples/bar-basic.html
@@ -32,9 +32,9 @@
 				"gridlines": "major",
 				"position": "top",
 				"labels": {
-					"rotate": "0"
+					"rotate": 0
 				},
-				"tickmark": "no",
+				"tickmark": false,
 				"title": { 
 					"text": "Population (millions)"
 				}
@@ -42,8 +42,7 @@
 			"yAxis": [{
 				"gridlines": "none",
 				"position": "left",
-				"tickmark": "yes",
-				"tickmark": "no",
+				"tickmarks": true,
 				"title": {
 					"text": "Continent"
 				}
