--- a/src/examples/bar-dual-axes.html
+++ b/src/examples/bar-dual-axes.html
@@ -19,9 +19,9 @@
 				"padding": 50
 			},
 			"linechart": {
-				"fillArea": "no",
+				"fillArea": false,
 				"interpolation": "cardinal",
-				"showMarkers": "yes"
+				"showMarkers": true
 			},
 			"legend": {
 				"title": "Rainfall vs Temperature",
@@ -38,7 +38,7 @@
 					"name": "Rainfall",
 					"gridlines": "none",
 					"orient": "top",
-					"tickmarks": "yes",
+					"tickmarks": true,
 					"title": {
 						"text": "mm"
 					}
@@ -46,7 +46,7 @@
 					"name": "Temperature",
 					"gridlines": "none",
 					"orient": "bottom",
-					"tickmarks": "yes",
+					"tickmarks": true,
 					"title": {
 						"text": "°C"
 					}
@@ -54,14 +54,14 @@
 			"yAxis": {
 				"gridlines": "none",
 				"orient": "left",
-				"tickmarks": "yes",
+				"tickmarks": true,
 				"title": {
 					"text": "Month"
 				}
 			},
 			"tooltip": {
 				"title": "Rainfall vs Temperature",
-				"showPercent": "yes"
+				"showPercent": true
 			},
 			"categories": {
 				"format": "%s",
