--- a/src/examples/bar-negative-stack.html
+++ b/src/examples/bar-negative-stack.html
@@ -34,7 +34,7 @@
 				"labels": {
 					"rotate": "0"
 				},
-				"tickmark": "no",
+				"tickmarks": false,
 				"title": { 
 					"text": "Population (millions)"
 				}
@@ -42,19 +42,14 @@
 			"yAxis": [{
 				"gridlines": "none",
 				"orient": "left",
-				"tickmark": "yes",
-				"tickmark": "no",
+				"tickmarks": true,
 				"title": {
-					"text": "Male vs Female"
+					"text": "Age"
 				}
 			},{
 				"gridlines": "none",
 				"orient": "right",
-				"tickmark": "yes",
-				"tickmark": "no",
-				"title": {
-					"text": "Male vs Female"
-				}
+				"tickmark": true
 			}],
 			"tooltip": { 
 				"title": "",
