--- a/src/examples/column-basic.html
+++ b/src/examples/column-basic.html
@@ -33,9 +33,9 @@
 				"gridlines": "none",
 				"position": "top",
 				"labels": {
-					"rotate": "0"
+					"rotate": 0
 				},
-				"tickmark": "no",
+				"tickmarks": false,
 				"title": { 
 					"text": "Month"
 				}
@@ -43,7 +43,7 @@
 			"yAxis": [{
 				"gridlines": "major",
 				"position": "left",
-				"tickmark": "yes",
+				"tickmarks": true,
 				"ticks": 4,
 				"title": {
 					"text": "Rainfall (mm)"
