--- a/src/examples/column-dual-axes.html
+++ b/src/examples/column-dual-axes.html
@@ -19,9 +19,9 @@
 				"padding": 50
 			},
 			"linechart": {
-				"fillArea": "no",
+				"fillArea": false,
 				"interpolation": "cardinal",
-				"showMarkers": "yes"
+				"showMarkers": true
 			},
 			"legend": {
 				"title": "Rainfall vs Temperature",
@@ -38,9 +38,9 @@
 				"gridlines": "none",
 				"orient": "bottom",
 				"labels": {
-					"rotate": "0"
+					"rotate": 0
 				},
-				"tickmarks": "yes",
+				"tickmarks": true,
 				"title": {
 					"text": "Year"
 				}
@@ -49,7 +49,7 @@
 					"name": "Rainfall",
 					"gridlines": "none",
 					"orient": "left",
-					"tickmarks": "yes",
+					"tickmarks": true,
 					"title": {
 						"text": "mm"
 					}
@@ -57,14 +57,14 @@
 					"name": "Temperature",
 					"gridlines": "none",
 					"orient": "right",
-					"tickmarks": "yes",
+					"tickmarks": true,
 					"title": {
 						"text": "°C"
 					}
 			}],
 			"tooltip": {
 				"title": "Rainfall vs Temperature",
-				"showPercent": "yes"
+				"showPercent": true
 			},
 			"categories": {
 				"format": "%s",
