--- a/src/examples/column-stacked-percent.html
+++ b/src/examples/column-stacked-percent.html
@@ -32,9 +32,9 @@
 				"gridlines": "none",
 				"position": "top",
 				"labels": {
-					"rotate": "0"
+					"rotate": 0
 				},
-				"tickmark": "no",
+				"tickmarks": false,
 				"title": { 
 					"text": ""
 				}
@@ -42,7 +42,7 @@
 			"yAxis": [{
 				"gridlines": "major",
 				"position": "left",
-				"tickmark": "yes",
+				"tickmarks": true,
 				"ticks": 4,
 				"title": {
 					"text": "Values"
