--- a/src/examples/area-basic.html
+++ b/src/examples/area-basic.html
@@ -19,9 +19,9 @@
 				"padding": 50
 			},
 			"linechart": {
-				"fillArea": "yes",
+				"fillArea": true,
 				"interpolation": "linear",
-				"showMarkers": "no"
+				"showMarkers": false
 			},
 			"piechart": {
 				"innerRadius": 0.7
@@ -40,9 +40,9 @@
 				"gridlines": "none",
 				"position": "top",
 				"labels": {
-					"rotate": "0"
+					"rotate": 0
 				},
-				"tickmark": "no",
+				"tickmarks": true,
 				"title": { 
 					"text": "Year"
 				}
@@ -50,10 +50,9 @@
 			"yAxis": [{
 				"gridlines": "none",
 				"position": "left",
-				"tickmark": "yes",
-				"tickmark": "no",
+				"tickmarks": false,
 				"title": {
-					"text": "Nuclear weapong status"
+					"text": "Nuclear weapon status"
 				}
 			}],
 			"tooltip": { 
