--- a/src/examples/area-negative.html
+++ b/src/examples/area-negative.html
@@ -19,9 +19,9 @@
 				"padding": 50
 			},
 			"linechart": {
-				"fillArea": "yes",
+				"fillArea": true,
 				"interpolation": "linear",
-				"showMarkers": "yes"
+				"showMarkers": true
 			},
 			"piechart": {
 				"innerRadius": 0.7
@@ -40,9 +40,9 @@
 				"gridlines": "none",
 				"position": "top",
 				"labels": {
-					"rotate": "0"
+					"rotate": 0
 				},
-				"tickmark": "no",
+				"tickmarks": false,
 				"title": {
 					"text": "Fruit"
 				}
@@ -50,8 +50,7 @@
 			"yAxis": [{
 				"gridlines": "major",
 				"position": "left",
-				"tickmark": "yes",
-				"tickmark": "no",
+				"tickmarks": true,
 				"title": {
 					"text": "Fruit Units"
 				}
