auto-placement of axis title based on size tick values

--- a/src/examples/bar-negative-stack.html
+++ b/src/examples/bar-negative-stack.html
@@ -36,7 +36,7 @@
 				},
 				"tickmarks": false,
 				"title": { 
-					"text": "Population (millions)"
+					"text": "Population"
 				}
 			}],
 			"yAxis": [{
@@ -44,12 +44,16 @@
 				"orient": "left",
 				"tickmarks": true,
 				"title": {
-					"text": "Age"
+					"text": "Age Men"
 				}
 			},{
 				"gridlines": "none",
 				"orient": "right",
-				"tickmark": true
+				"tickmark": true, 
+				"title": {
+					"text": "Age Women"
+				}
+
 			}],
 			"tooltip": { 
 				"title": "",
