--- a/src/examples/bar-labels.html
+++ b/src/examples/bar-labels.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Line Chart - Basic</title>
+    <title>Bar Chart - Basic</title>
     <!-- general styles -->
     <link rel="stylesheet" href="../../dist/css/style.css" />
     <link rel="stylesheet" href="../../dist/css/d3charts.css" />
@@ -16,32 +16,27 @@
 			"canvas": {
 				"height": 300,
 				"width": 600,
-				"padding": 50
-			},
-			"linechart": {
-				"fillArea": false,
-				"interpolation": "linear",
-				"showMarkers": true
+				"padding": 90
 			},
 			"legend": {
-				"title": "City",
+				"title": "Continent",
 				"position": "right",
 				"width": 200
 			},
 			"title": {
-				"text": "Line Chart - Basic",
+				"text": "Bar Chart - Basic",
 				"align": "center",
 				"height": 50
 			},
 			"xAxis": [{
-				"gridlines": "none",
+				"gridlines": "major",
 				"position": "top",
 				"labels": {
 					"rotate": 0
 				},
-				"tickmarks": false,
-				"title": {
-					"text": "Month"
+				"tickmark": false,
+				"title": { 
+					"text": "Population (millions)"
 				}
 			}],
 			"yAxis": [{
@@ -49,42 +44,39 @@
 				"position": "left",
 				"tickmarks": true,
 				"title": {
-					"text": "Temperature"
+					"text": "Continent"
 				}
 			}],
-			"tooltip": {
-				"title": "Temperature",
-				"valueSuffix": " °C"
+			"tooltip": { 
+				"title": "Warheads",
+				"valueSuffix": " warheads"
 			},
 			"categories": {
 				"format": "%s",
-				"data": ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"]
+				"data": ["Africa", "America", "Asia", "Europe", "Oceania"]
 			},
 			"series": {
 				"data": [{
-						"name": "Tokyo",
-						"data": [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
+						"name": "Year 1800",
+						"data": [107, 31, 635, 203, 2]
 					}, {
-						"name": "New York",
-						"data": [-0.2, 0.8, 5.7, 11.3, 17.0, 22.0, 24.8, 24.1, 20.1, 14.1, 8.6, 2.5]
+						"name": "Year 1900",
+						"data": [133, 156, 947, 408, 6]
 					}, {
-						"name": "Berlin",
-						"data": [-0.9, 0.6, 3.5, 8.4, 13.5, 17.0, 18.6, 17.9, 14.3, 9.0, 3.9, 1.0]
-					}, {
-						"name": "London",
-						"data": [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
+						"name": "Year 2008",
+						"data": [973, 914, 4054, 732, 34]
 					}],
-				"showLabels": false
+					"showLabels": true
 			},
 			"plotOptions": {
-				"general": {
+				"general": { 
 					"innerPadding": 0.1,
 					"outerPadding": 0.5
 				}
 			}
 		};
 
-		var chart = new frnk.UI.Charts.LineChart(settings, "#chart");
+		var chart = new frnk.UI.Charts.BarChart(settings, "#chart");
 		chart.draw();
     </script>
 </body>
