--- a/src/examples/column-basic.html
+++ b/src/examples/column-basic.html
@@ -75,7 +75,7 @@
 					"data": [42.4, 33.2, 34.5, 39.7, 52.6, 75.5, 57.4, 60.4, 47.6, 39.1, 46.8, 51.1]
 
 				}], 
-				showLabels: true
+				showLabels: false
 			},
 			"plotOptions": {
 				"general": { 
