--- a/src/examples/column-labels.html
+++ b/src/examples/column-labels.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Line Chart - Basic</title>
+    <title>Column Chart - 100% Stacked</title>
     <!-- general styles -->
     <link rel="stylesheet" href="../../dist/css/style.css" />
     <link rel="stylesheet" href="../../dist/css/d3charts.css" />
@@ -18,20 +18,16 @@
 				"width": 600,
 				"padding": 50
 			},
-			"linechart": {
-				"fillArea": false,
-				"interpolation": "linear",
-				"showMarkers": true
-			},
 			"legend": {
-				"title": "City",
+				"title": "Who?",
 				"position": "right",
 				"width": 200
 			},
 			"title": {
-				"text": "Line Chart - Basic",
+				"text": "Column Chart - Basic",
 				"align": "center",
-				"height": 50
+				"height": 50,
+				"subtitle": "Source: WorldClimate.com"
 			},
 			"xAxis": [{
 				"gridlines": "none",
@@ -40,21 +36,22 @@
 					"rotate": 0
 				},
 				"tickmarks": false,
-				"title": {
+				"title": { 
 					"text": "Month"
 				}
 			}],
 			"yAxis": [{
-				"gridlines": "none",
+				"gridlines": "major",
 				"position": "left",
 				"tickmarks": true,
+				"ticks": 4,
 				"title": {
-					"text": "Temperature"
+					"text": "Rainfall (mm)"
 				}
 			}],
-			"tooltip": {
-				"title": "Temperature",
-				"valueSuffix": " °C"
+			"tooltip": { 
+				"title": "Rainfall",
+				"valueSuffix": " mm"
 			},
 			"categories": {
 				"format": "%s",
@@ -62,29 +59,33 @@
 			},
 			"series": {
 				"data": [{
-						"name": "Tokyo",
-						"data": [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
-					}, {
-						"name": "New York",
-						"data": [-0.2, 0.8, 5.7, 11.3, 17.0, 22.0, 24.8, 24.1, 20.1, 14.1, 8.6, 2.5]
-					}, {
-						"name": "Berlin",
-						"data": [-0.9, 0.6, 3.5, 8.4, 13.5, 17.0, 18.6, 17.9, 14.3, 9.0, 3.9, 1.0]
-					}, {
-						"name": "London",
-						"data": [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
-					}],
-				"showLabels": false
+					"name": "Tokyo",
+					"data": [49.9, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4]
+
+				}, {
+					"name": "New York",
+					"data": [83.6, 78.8, 98.5, 93.4, 106.0, 84.5, 105.0, 104.3, 91.2, 83.5, 106.6, 92.3]
+
+				}, {
+					"name": "London",
+					"data": [48.9, 38.8, 39.3, 41.4, 47.0, 48.3, 59.0, 59.6, 52.4, 65.2, 59.3, 51.2]
+
+				}, {
+					"name": "Berlin",
+					"data": [42.4, 33.2, 34.5, 39.7, 52.6, 75.5, 57.4, 60.4, 47.6, 39.1, 46.8, 51.1]
+
+				}], 
+				showLabels: true
 			},
 			"plotOptions": {
-				"general": {
+				"general": { 
 					"innerPadding": 0.1,
 					"outerPadding": 0.5
 				}
 			}
 		};
 
-		var chart = new frnk.UI.Charts.LineChart(settings, "#chart");
+		var chart = new frnk.UI.Charts.ColumnChart(settings, "#chart");
 		chart.draw();
     </script>
 </body>
