added animation to all charts but piechart

--- a/src/examples/area-stacked-percent.html
+++ b/src/examples/area-stacked-percent.html
@@ -16,7 +16,7 @@
 			"canvas": {
 				"height": 300,
 				"width": 600,
-				"padding": 50
+				"padding": 60
 			},
 			"linechart": {
 				"fillArea": true,
@@ -33,7 +33,7 @@
 				"align": "center",
 				"height": 50
 			},
-			"xAxis": [{
+			"xAxis": {
 				"gridlines": "none",
 				"position": "top",
 				"labels": {
@@ -43,15 +43,16 @@
 				"title": { 
 					"text": "Year"
 				}
-			}],
-			"yAxis": [{
+			},
+			"yAxis": {
+				"format": "%",
 				"gridlines": "none",
 				"position": "left",
 				"tickmarks": true,
 				"title": {
 					"text": "Percent"
 				}
-			}],
+			},
 			"tooltip": { 
 				"title": "Population",
 				"valueSuffix": " people"
