--- a/src/examples/area-stepbefore.html
+++ b/src/examples/area-stepbefore.html
@@ -16,7 +16,7 @@
 			"canvas": {
 				"height": 300,
 				"width": 600,
-				"padding": 50
+				"padding": 60
 			},
 			"linechart": {
 				"fillArea": true,
@@ -61,6 +61,7 @@
 				"data": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]
 			},
 			"series": {
+				"animate": true,
 				"data": [{
 						"name": "John",
 						"data": [3, 4, 3, 5, 4, 10, 12]
