--- a/src/examples/bar-basic.html
+++ b/src/examples/bar-basic.html
@@ -42,10 +42,7 @@
 			"yAxis": [{
 				"gridlines": "none",
 				"position": "left",
-				"tickmarks": true,
-				"title": {
-					"text": "Continent"
-				}
+				"tickmarks": true
 			}],
 			"tooltip": { 
 				"title": "Warheads",
