--- a/src/examples/bar-negative-stack.html
+++ b/src/examples/bar-negative-stack.html
@@ -68,6 +68,7 @@
 					"95-99", "100 +"]
 			},
 			"series": {
+				"animate": true,
 				"data": [{
 						"name": "Male",
 						"data": [-1746181, -1884428, -2089758, -2222362, -2537431, -2507081, -2443179,
