--- a/src/examples/column-stacked-percent.html
+++ b/src/examples/column-stacked-percent.html
@@ -28,7 +28,7 @@
 				"align": "center",
 				"height": 50
 			},
-			"xAxis": [{
+			"xAxis": {
 				"gridlines": "none",
 				"position": "top",
 				"labels": {
@@ -38,8 +38,9 @@
 				"title": { 
 					"text": ""
 				}
-			}],
-			"yAxis": [{
+			},
+			"yAxis": {
+				"format": "%",
 				"gridlines": "major",
 				"position": "left",
 				"tickmarks": true,
@@ -47,7 +48,7 @@
 				"title": {
 					"text": "Values"
 				}
-			}],
+			},
 			"tooltip": { 
 				"title": "Warheads",
 				"valueSuffix": " warheads"
