--- a/src/examples/line-basic.html
+++ b/src/examples/line-basic.html
@@ -61,6 +61,7 @@
 				"data": ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"]
 			},
 			"series": {
+				"animate": true,
 				"data": [{
 						"name": "Tokyo",
 						"data": [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
