moved format property under labels for Axis

--- a/src/examples/area-stacked-percent.html
+++ b/src/examples/area-stacked-percent.html
@@ -45,8 +45,10 @@
 				}
 			},
 			"yAxis": {
-				"format": "%",
 				"gridlines": "none",
+				"labels": {
+					"format": "%"
+				},
 				"position": "left",
 				"tickmarks": true,
 				"title": {
