--- a/src/examples/column-stacked-percent.html
+++ b/src/examples/column-stacked-percent.html
@@ -40,8 +40,10 @@
 				}
 			},
 			"yAxis": {
-				"format": "%",
 				"gridlines": "major",
+				"labels": {
+					"format": "%"
+				},
 				"position": "left",
 				"tickmarks": true,
 				"ticks": 4,
