--- a/src/examples/bar-negative-stack.html
+++ b/src/examples/bar-negative-stack.html
@@ -16,7 +16,7 @@
 			"canvas": {
 				"height": 300,
 				"width": 600,
-				"padding": 90
+				"padding": 20
 			},
 			"legend": {
 				"title": "Category",
@@ -30,7 +30,7 @@
 			},
 			"xAxis": [{
 				"gridlines": "major",
-				"position": "top",
+				"orient": "top",
 				"labels": {
 					"rotate": "0"
 				},
