--- a/src/examples/column-negative-stack.html
+++ b/src/examples/column-negative-stack.html
@@ -16,7 +16,7 @@
 			"canvas": {
 				"height": 300,
 				"width": 600,
-				"padding": 90
+				"padding": 20
 			},
 			"legend": {
 				"title": "Category",
@@ -46,7 +46,7 @@
 			}],
 			"yAxis": [{
 				"gridlines": "major",
-				"position": "left",
+				"orient": "left",
 				"labels": {
 					"rotate": 0
 				},
