--- a/src/examples/column-stacked.html
+++ b/src/examples/column-stacked.html
@@ -16,7 +16,7 @@
 			"canvas": {
 				"height": 300,
 				"width": 600,
-				"padding": 70
+				"padding": 20
 			},
 			"legend": {
 				"title": "Population",
@@ -30,7 +30,6 @@
 			},
 			"xAxis": {
 				"gridlines": "none",
-				"position": "top",
 				"labels": {
 					"rotate": 0
 				},
@@ -44,7 +43,7 @@
 				"labels": {
 					"format": ""
 				},
-				"position": "left",
+				"orient": "left",
 				"tickmarks": true,
 				"ticks": 4,
 				"title": {
