--- a/src/examples/line-rotated-cat-labels.html
+++ b/src/examples/line-rotated-cat-labels.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Line Chart - Dual Axis</title>
+    <title>Line Chart - Rotated Axis Labels</title>
     <!-- general styles -->
     <link rel="stylesheet" href="../../dist/css/style.css" />
     <link rel="stylesheet" href="../../dist/css/d3charts.css" />
@@ -29,7 +29,7 @@
 				"width": 200
 			},
 			"title": {
-				"text": "Line Chart - Dual Axes",
+				"text": "Line Chart - Rotated Axes Labels",
 				"align": "center",
 				"height": 50,
 				"margin": 15
@@ -38,7 +38,7 @@
 				"gridlines": "none",
 				"orient": "bottom",
 				"labels": {
-					"rotate": 0
+					"rotate": -45
 				},
 				"tickmarks": true,
 				"title": {
@@ -68,7 +68,7 @@
 			},
 			"categories": {
 				"format": "%s",
-				"data": ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"]
+				"data": ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"]
 			},
 			"series": {
 				"name": "Population",
