--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <!-- d3charts -->
     <link rel="stylesheet" href="css/d3charts.css" />
     <script src="js/d3.min.js" charset="utf-8"></script>
+    <!--script src="https://d3js.org/d3.v4.min.js"></script-->
     <script src="js/d3.charts.js"></script>
 </head>
 <body>
@@ -42,8 +43,8 @@
         var el = document.getElementById('chart');
         //var url = "data/Actuals-vs-Budget.txt";
         //var url = "data/area-basic-1serie-ordinal.txt";
-        //var url = "data/area-basic-nserie-ordinal.txt";
-        var url = "data/multiple-axes.txt";
+        var url = "data/area-basic-nserie-ordinal.txt";
+        //var url = "data/multiple-axes.txt";
         //var url = "data/area-negative-1serie-ordinal.txt";
         //var url = "data/area-negative-nserie-ordinal.txt";
         //var url = "data/area-negative-inverted-1serie-ordinal.txt";
