--- a/src/examples/column-basic.html
+++ b/src/examples/column-basic.html
@@ -16,7 +16,7 @@
 			"canvas": {
 				"height": 300,
 				"width": 600,
-				"padding": 50
+				"padding": 20
 			},
 			"legend": {
 				"title": "Who?",
@@ -31,7 +31,6 @@
 			},
 			"xAxis": [{
 				"gridlines": "none",
-				"position": "top",
 				"labels": {
 					"rotate": 0
 				},
@@ -42,8 +41,7 @@
 			}],
 			"yAxis": [{
 				"gridlines": "major",
-				"position": "left",
-				"tickmarks": true,
+				"orient": "left",
 				"ticks": 4,
 				"title": {
 					"text": "Rainfall (mm)"
