--- a/src/examples/line-labels.html
+++ b/src/examples/line-labels.html
@@ -16,7 +16,7 @@
 			"canvas": {
 				"height": 300,
 				"width": 600,
-				"padding": 50
+				"padding": 20
 			},
 			"linechart": {
 				"fillArea": false,
@@ -35,7 +35,6 @@
 			},
 			"xAxis": [{
 				"gridlines": "none",
-				"position": "top",
 				"labels": {
 					"rotate": 0
 				},
@@ -46,7 +45,7 @@
 			}],
 			"yAxis": [{
 				"gridlines": "major",
-				"position": "left",
+				"orient": "left",
 				"tickmarks": true,
 				"title": {
 					"text": "Temperature"
