added ability to rotate serie labels

--- a/src/examples/bar-labels.html
+++ b/src/examples/bar-labels.html
@@ -61,7 +61,9 @@
 						"name": "Year 2008",
 						"data": [973, 914, 4054, 732, 34]
 					}],
-					"showLabels": true
+					"labels": {
+                        "enabled": true
+                    }
 			},
 			"plotOptions": {
 				"general": { 
